--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "http-proxy": "~0.10.3",
-    "lodash": "~0.9.0"
+    "lodash": "~0.9.0",
+    "http-proxy": "^1.1.4"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.1.1",
